Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.6(EOL), 10.11, 11.8, 12.2(EOL)
-
Can result in hang or crash
-
Q4/2025 Galera Development
Description
--source include/galera_cluster.inc
|
|
|
SET SESSION max_error_count=0; |
SET GLOBAL wsrep_ignore_apply_errors = 0; |
GRANT SELECT ON *.* TO dummy@'localhost'; |
Leads to:
|
CS 10.6.24 764b893cb7f7492b587541fea1880cd7cc91d743 (Debug) Build 19/09/2025 |
Core was generated by `/test/GAL_MD190925-mariadb-10.6.24-linux-x86_64-dbg/bin/mariadbd --defaults-fil'.
|
Program terminated with signal SIGSEGV, Segmentation fault.
|
#0 __pthread_kill_implementation (no_tid=0, signo=11, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
|
|
|
[Current thread is 1 (LWP 2714942)]
|
(gdb) bt
|
#0 __pthread_kill_implementation (no_tid=0, signo=11, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
|
#1 __pthread_kill_internal (signo=11, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
|
#2 __GI___pthread_kill (threadid=<optimized out>, signo=11)at ./nptl/pthread_kill.c:89
|
#3 0x000062371ee90c39 in my_write_core (sig=11)at /test/10.6_dbg/mysys/stacktrace.c:424
|
#4 0x000062371e5511a5 in handle_fatal_signal (sig=11)at /test/10.6_dbg/sql/signal_handler.cc:298
|
#5 <signal handler called>
|
#6 wsrep_store_error_rli (thd=0x7679c4000d58, dst=@0x769c88057a20: {buffer_ = std::__debug::vector of length 0, capacity 2048}, include_msg=false) at /test/10.6_dbg/sql/wsrep_applier.cc:91
|
#7 0x000062371e9083eb in wsrep_store_error (thd=0x7679c4000d58, dst=@0x769c88057a20: {buffer_ = std::__debug::vector of length 0, capacity 2048}, include_msg=false) at /test/10.6_dbg/sql/wsrep_applier.cc:166
|
#8 0x000062371e8ea034 in wsrep_TOI_end (thd=0x7679c4000d58)at /test/10.6_dbg/sql/wsrep_mysqld.cc:2944
|
#9 0x000062371e8eab5b in wsrep_to_isolation_end (thd=0x7679c4000d58)at /test/10.6_dbg/sql/wsrep_mysqld.cc:3160
|
#10 0x000062371e1b4361 in mysql_execute_command (thd=0x7679c4000d58, is_called_from_prepared_stmt=false) at /test/10.6_dbg/sql/sql_parse.cc:6295
|
#11 0x000062371e1b991d in mysql_parse (thd=0x7679c4000d58, rawbuf=0x7679c4013440 "GRANT UPDATE ON *.* TO dummy@'localhost'", length=40, parser_state=0x769c880582e0)at /test/10.6_dbg/sql/sql_parse.cc:8200
|
#12 0x000062371e1b901a in wsrep_mysql_parse (thd=0x7679c4000d58, rawbuf=0x7679c4013440 "GRANT UPDATE ON *.* TO dummy@'localhost'", length=40, parser_state=0x769c880582e0)at /test/10.6_dbg/sql/sql_parse.cc:8011
|
#13 0x000062371e1a569a in dispatch_command (command=COM_QUERY, thd=0x7679c4000d58, packet=0x7679c400aec9 "GRANT UPDATE ON *.* TO dummy@'localhost'", packet_length=40, blocking=true) at /test/10.6_dbg/sql/sql_parse.cc:1895
|
#14 0x000062371e1a433c in do_command (thd=0x7679c4000d58, blocking=true)at /test/10.6_dbg/sql/sql_parse.cc:1421
|
#15 0x000062371e364a6b in do_handle_one_connection (connect=0x62372e4468f8, put_in_cache=true) at /test/10.6_dbg/sql/sql_connect.cc:1386
|
#16 0x000062371e364816 in handle_one_connection (arg=0x62372e45d3e8)at /test/10.6_dbg/sql/sql_connect.cc:1298
|
#17 0x000076a06909caa4 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
|
#18 0x000076a069129c3c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
|
|
Galera Bug Detection Matrix |
Rel o/d Build Commit UniqueID observed
|
CS 10.6 dbg 190925 764b893cb7f7492b587541fea1880cd7cc91d743 SIGSEGV|wsrep_store_error_rli|wsrep_store_error|wsrep_TOI_end|wsrep_to_isolation_end
|
CS 10.6 opt 190925 764b893cb7f7492b587541fea1880cd7cc91d743 SIGSEGV|wsrep_store_error_rli|wsrep_store_error|wsrep_TOI_end|wsrep_to_isolation_end
|
CS 10.11 dbg 291025 808851d729e36e59cb29cf24a298644c4a656056 SIGSEGV|wsrep_store_error_rli|wsrep_store_error|wsrep_TOI_end|wsrep_to_isolation_end
|
CS 10.11 opt 291025 808851d729e36e59cb29cf24a298644c4a656056 SIGSEGV|wsrep_store_error_rli|wsrep_store_error|wsrep_TOI_end|wsrep_to_isolation_end
|
CS 11.4 dbg 291025 75ded7d03abb4de385f97ce7cf20622882b8df05 SIGSEGV|wsrep_store_error_rli|wsrep_store_error|wsrep_TOI_end|wsrep_to_isolation_end
|
CS 11.4 opt 291025 75ded7d03abb4de385f97ce7cf20622882b8df05 SIGSEGV|wsrep_store_error_rli|wsrep_store_error|wsrep_TOI_end|wsrep_to_isolation_end
|
CS 11.8 dbg 091025 5eeccca5804d0e4726024f6782544ecdd6323d2f SIGSEGV|wsrep_store_error_rli|wsrep_store_error|wsrep_TOI_end|wsrep_to_isolation_end
|
CS 11.8 opt 091025 5eeccca5804d0e4726024f6782544ecdd6323d2f SIGSEGV|wsrep_store_error_rli|wsrep_store_error|wsrep_TOI_end|wsrep_to_isolation_end
|
CS 12.1 dbg 291025 4af88ced488e78458f0febb55a0ae67783330029 SIGSEGV|wsrep_store_error_rli|wsrep_store_error|wsrep_TOI_end|wsrep_to_isolation_end
|
CS 12.1 opt 291025 4af88ced488e78458f0febb55a0ae67783330029 SIGSEGV|wsrep_store_error_rli|wsrep_store_error|wsrep_TOI_end|wsrep_to_isolation_end
|
CS 12.2 dbg 211025 49c3c2ab3642dbbabc8cba71210ad3c468dd8540 SIGSEGV|wsrep_store_error_rli|wsrep_store_error|wsrep_TOI_end|wsrep_to_isolation_end
|
CS 12.2 opt 211025 49c3c2ab3642dbbabc8cba71210ad3c468dd8540 SIGSEGV|wsrep_store_error_rli|wsrep_store_error|wsrep_TOI_end|wsrep_to_isolation_end
|
ES 11.4 dbg 291025 af4026b9b3c8fe0d2b054b55c211f353d073648d MARIADB_ERROR_CODE|MariaDB error code: 1133
|
ES 11.4 opt 291025 af4026b9b3c8fe0d2b054b55c211f353d073648d MARIADB_ERROR_CODE|MariaDB error code: 1133
|
ES 11.8 dbg 120925 0d06f96e3bd9ccbe19f23876a7b3117054c3a0fd MARIADB_ERROR_CODE|MariaDB error code: 1133
|
ES 11.8 opt 120925 0d06f96e3bd9ccbe19f23876a7b3117054c3a0fd MARIADB_ERROR_CODE|MariaDB error code: 1133
|
Galera ES node goes to inconsistent state when executing grant statement