MDEV-37991 : Galera cluster crashes when granting permission to non existing user after setting max_error_count and wsrep_ignore_apply_errors to zero

There was two problems. Firsty, implementation assumed that
thd->wsrep_rgi is not nullptr, this is not true for TOI.
Secondly, Sql_condition_iterator was also assumed to be
not nullptr, this might not be also true.

Fixed by adding nullptr guard for thd->wsrep_rgi and
if Sql_condition_iterator is nullptr obtain error
information directly from Diagnostics_area if there
is some error there.